# linux_conf

./: .gitmodules  README.md
other_files/python_projects/default/: pyproject.toml
other_files/python_projects/django/: pyproject.toml
tmux/: README.md  tmux.conf  tmux.reset.conf
zsh/: aliases.zsh
